--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2168,42 +2168,42 @@ cards:
   - heading: Vaccination uptake, by vaccination date age demographics
     cardType: chart
     experimental: false
-    locationAware:
-      excluded:
-        areaCode:
-          - S12000005
-          - S12000006
-          - S12000008
-          - S12000010
-          - S12000011
-          - S12000013
-          - S12000014
-          - S12000017
-          - S12000018
-          - S12000019
-          - S12000020
-          - S12000021
-          - S12000023
-          - S12000026
-          - S12000027
-          - S12000028
-          - S12000029
-          - S12000030
-          - S12000033
-          - S12000034
-          - S12000035
-          - S12000036
-          - S12000038
-          - S12000039
-          - S12000040
-          - S12000041
-          - S12000042
-          - S12000045
-          - S12000047
-          - S12000048
-          - S12000049
-          - S12000050
-          - S92000003
+    # locationAware:
+    #   excluded:
+    #     areaCode:
+    #       - S12000005
+    #       - S12000006
+    #       - S12000008
+    #       - S12000010
+    #       - S12000011
+    #       - S12000013
+    #       - S12000014
+    #       - S12000017
+    #       - S12000018
+    #       - S12000019
+    #       - S12000020
+    #       - S12000021
+    #       - S12000023
+    #       - S12000026
+    #       - S12000027
+    #       - S12000028
+    #       - S12000029
+    #       - S12000030
+    #       - S12000033
+    #       - S12000034
+    #       - S12000035
+    #       - S12000036
+    #       - S12000038
+    #       - S12000039
+    #       - S12000040
+    #       - S12000041
+    #       - S12000042
+    #       - S12000045
+    #       - S12000047
+    #       - S12000048
+    #       - S12000049
+    #       - S12000050
+    #       - S92000003
           
 
     fullWidth: true
