--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2173,10 +2173,12 @@ cards:
     abstract: >
       Total percentage of people by age group who have received a COVID-19 vaccination, shown by vaccination date.
       Daily figures include all vaccines that were given up to and including the date shown.
-      These are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. The denominator
-      used is the number of people on the National Immunisation Management Service (NIMS) database. 
+      For English areas, these are provided for population surveillance purposes, and only people who have an NHS number and are currently alive are included. 
+      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
-    
+      For Scottish areas, the denominator used is the mid-2019 population estimate, published by National Records of Scotland. 
+      For this reason, comparisons should be made with caution. 
+
     download:
       - vaccinationsAgeDemographics
     
