corrects barType flag for optional cards

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -539,7 +539,7 @@ cards:
       tabs:
         - heading: Daily
           tabType: chart
-          barType: stack
+          # barType: stack
           colours: [0] # areaNames in alphabetical order
           params:
             - key: areaType
@@ -767,7 +767,7 @@ cards:
       tabs:
         - heading: Daily
           tabType: chart
-          barType: stack
+          # barType: stack
           colours: [0] # areaNames in alphabetical order
           params:
             - key: areaType
