--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -77,7 +77,7 @@ cards:
       tabs:
         - heading: Daily
           tabType: chart
-          barType: stack
+          # barType: stack
           colours: [0] # areaNames in alphabetical order
           params:
             - key: areaType
