--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -83,7 +83,7 @@ colours:
 
 changeLog:
   - type: *newFeature
-    date: "2021-07-07"
+    date: "2021-07-08"
     displayBanner: true
     relativeUrl: 
     headline: New option to see charts in logarithmic scale
@@ -95,13 +95,14 @@ changeLog:
       
     details: |
       The feature is only available on charts where a logarithmic scale is deemed useful. 
-      This is determined as follows:
+      This means that heatmaps, choropleths, and waffle charts excluded. For all other charts, 
+      the usability is determined as follows:
 
       For each vector in the chart with more than 10 values:
       - **mid**: `median(median(vector_[1..n]))`
       - **stdev**: `median(standard deviation(vector_[1..n]))`
 
-      The toggle option autmatically appears where `stdev` is greater than `mid`.
+      The toggle option autmatically appears where **stdev** is greater than **mid**.
 
   - type: *newMetric
     date: "2021-07-05"
