adds stacked charts to exlusion list of log-scale log

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -88,15 +88,15 @@ changeLog:
     relativeUrl: 
     headline: New option to see charts in logarithmic scale
     body: |
-      Charts now feature an toggle that enables switching between linear and 
+      Charts now feature a toggle that enables switching between linear and 
       logarithmic (base 10) scales.
 
       The option is not available on all charts.
       
     details: |
       The feature is only available on charts where a logarithmic scale is deemed useful. 
-      This means that it is not enabled on heatmaps, choropleths, and waffle charts. For 
-      all other charts, the usability is determined as follows:
+      This means that it is not enabled on heatmaps, choropleths, waffle charts, and 
+      stacked bar charts. For all other charts, the usability is determined as follows:
 
       For each vector in the chart with more than 10 values:
       - **mid**: `median(median(vector_[1..n]))`
