--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -606,6 +606,7 @@ cards:
 
         - heading: Uptake
           tabType: chart
+          chartMode: percentage
           params:
             - key: areaType
               sign: "="
@@ -686,6 +687,7 @@ cards:
 
           - heading: 1st dose
             tabType: chart
+            chartMode: percentage
             colours: [0, 9, 3, 10] # areaNames in alphabetical order
             params:
               - key: areaType
@@ -2123,7 +2125,7 @@ cards:
 
       - heading: Uptake
         tabType: chart
-       
+        chartMode: percentage
         fields:
             - label: 1st dose (%)
               value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
