--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -95,8 +95,14 @@ changeLog:
       
     details: |
       The feature is only available on charts where a logarithmic scale is deemed useful. 
-      This means that it is not enabled on heatmaps, choropleths, waffle charts, and 
-      stacked bar charts. For all other charts, the usability is determined as follows:
+      This means that it is not enabled on:
+      - heatmaps
+      - choropleths
+      - waffle charts 
+      - stacked bar charts
+      - percentage charts
+      
+      For all other charts, the usability is determined as follows:
 
       For each vector in the chart with more than 10 values:
       - **mid**: `median(median(vector_[1..n]))`
