--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,12 +1,19 @@
 
+- appearByUpdate: "2021-07-13"
+  disappearByUpdate: "2021-07-14"
+  date: "2021-07-14"
+  body: >
+    Because of a processing issue, today's update is delayed.
+
+
+# {{ StartDevOnlyBlock }}
+
 - appearByUpdate: "2021-07-02"
   disappearByUpdate: "2021-07-03"
   date: "2021-07-03"
   body: >
     Because of a processing issue, today's update is delayed.
 
-
-# {{ StartDevOnlyBlock }}
 - appearByUpdate: "2021-06-22"
   disappearByUpdate: "2021-06-23"
   date: "2021-06-22"
