adds UK numbers to banner

--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -5,6 +5,16 @@
   body: >
     Because of a processing issue, today's update is delayed.
 
+    UK figures for 14 July 2021:
+    
+    42,302 new cases
+
+    49 new deaths within 28 days of a positive test
+
+    46,037,090 people have now received the first dose of a vaccine
+
+    35,155,767 have received a 2nd dose. 
+
 
 # {{ StartDevOnlyBlock }}
 
