--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -88,8 +88,9 @@ changeLog:
     relativeUrl:
     headline: UK newly reported 1st dose vaccinations affected by reduction in Northern Ireland total
     body: |
-      Because the total number of 1st dose vaccinations reported in Northern Ireland was lower than yesterday, the UK number is reduced by 16,162. 
-      The total reported for England, Scotland and Wales combined is 34,348.
+      The total number of 1st dose vaccinations reported in Northern Ireland was lower than the previous day. 
+      This means that the number of new first doses given in the UK is reduced by 16,162. The number of new first doses
+      reported for England, Scotland and Wales combined is 34,348.
 
 
   - type: *dataIssue
