delay - England deaths

--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,3 +1,9 @@
+- appearByUpdate: "2021-07-24"
+  disappearByUpdate: "2021-07-25"
+  date: "2021-07-25"
+  body: >
+    Because of technical difficulties in processing England deaths data, today's update is delayed.
+
 - appearByUpdate: "2021-07-23"
   disappearByUpdate: "2021-07-24"
   date: "2021-07-24"
